--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
-body{background:black
-color:gold
+body{background:black;
+color:gold;
 padding:10px;
 font-family:Arial,sans-serif}
 
-#all-contents{max: width 800px;
-margin:auto}
+#all-contents{
+    max-width: 800px;
+    margin:auto;
+}
 
-nav{background: rgb(201, 203, 24);
+nav{
+    background: rgb(201, 203, 24);
 margin:0 auto;
 display: flex;
 padding: 10xp}
 
 h1{display:flex;
-align-items:center
-color:white
+align-items:center;
+color: white;
 flex:1;
-margin:0}
+margin:0;}
 
 #nav-ul{list-style-type: style type none;
 margin:0;
-padding:0 10px}
+padding:0 10px;}
 
 a{text-decoration:none
 color#e2d10f};
@@ -27,13 +30,13 @@ main{background:rgba(245, 238, 219, 0);
 display:flex;
 margin-top:20px}
 
-.sidebar{margin-right:25px
-padding:10px}
+.sidebar{margin-right:25px;
+padding:10px;}
 .sidebar-img{width: 600px}
-.content{flex:1
-padding:15px}
-#interests{border:4px rgb(255, 255, 255) ridge
-padding:8px
+.content{flex:1;
+padding:15px;}
+#interests{border:4px rgb(255, 255, 255);
+padding:8px;
 padding:8px;
 margin-top:20px}
 h2,h3{margin:0px}
