--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@ padding:8px;
 padding:8px;
 margin-top:20px}
 h2,h3{margin:0px}
+.content h1{color:black;}
+#portfolio{list-style-type:none;
+padding-left:0;}
+#portfolio li{background:#fff;
+padding:10px;
+border-radius:10px;
+margin-bottom:10px;}
+#portfolio li:hover{background:#eee;}
+#portfoli a{text-decoration:none;
+color:454545;}
